traces/bug_41.txt
src/medit/transform.c:33: error: NULL_DEREFERENCE
  pointer `tr` last assigned on line 28 could be null and is dereferenced at line 33, column 3.
Showing all 17 steps of the trace


src/medit/transform.c:22:1: start of procedure createTransform()
20.   }
21.   
22. > pTransform createTransform() {
23.     pTransform   tr;
24.   

src/medit/transform.c:26:8: Taking true branch
24.   
25.     /* default */
26.     if ( ddebug) printf("create transformation\n");
             ^
27.   
28.     tr = (pTransform)M_calloc(1,sizeof(struct transform),"transform") ;

src/medit/transform.c:26:16: 
24.   
25.     /* default */
26. >   if ( ddebug) printf("create transformation\n");
27.   
28.     tr = (pTransform)M_calloc(1,sizeof(struct transform),"transform") ;

src/medit/transform.c:28:3: 
26.     if ( ddebug) printf("create transformation\n");
27.   
28. >   tr = (pTransform)M_calloc(1,sizeof(struct transform),"transform") ;
29.     assert(tr);
30.   

src/libMesh/memory.c:123:1: start of procedure M_calloc()
  121.      elsize bytes, and initializes the space to zeros.  
  122.      Actual amount of space allocated is >=  nelem * elsize bytes. */
  123. > void *M_calloc(size_t nelem, size_t elsize,char *call) {
  124.     int    i;
  125.   

src/libMesh/memory.c:127:9: Taking true branch
  125.   
  126.     /* check if first call */
  127.     if ( !mstack ) {
                 ^
  128.       mstack = (Memstack *)calloc((1+MAXMEM),sizeof(Memstack));
  129.       assert(mstack);

src/libMesh/memory.c:128:5: 
  126.     /* check if first call */
  127.     if ( !mstack ) {
  128. >     mstack = (Memstack *)calloc((1+MAXMEM),sizeof(Memstack));
  129.       assert(mstack);
  130.       for (i=1; i<MAXMEM; i++)

src/libMesh/memory.c:130:10: 
  128.       mstack = (Memstack *)calloc((1+MAXMEM),sizeof(Memstack));
  129.       assert(mstack);
  130. >     for (i=1; i<MAXMEM; i++)
  131.         mstack[i].nxt    = i+1;
  132.       cur   = 1;

src/libMesh/memory.c:130:15: Loop condition is false. Leaving loop
  128.       mstack = (Memstack *)calloc((1+MAXMEM),sizeof(Memstack));
  129.       assert(mstack);
  130.       for (i=1; i<MAXMEM; i++)
                       ^
  131.         mstack[i].nxt    = i+1;
  132.       cur   = 1;

src/libMesh/memory.c:132:5: 
  130.       for (i=1; i<MAXMEM; i++)
  131.         mstack[i].nxt    = i+1;
  132. >     cur   = 1;
  133.       stack = 0;
  134.     }

src/libMesh/memory.c:133:5: 
  131.         mstack[i].nxt    = i+1;
  132.       cur   = 1;
  133. >     stack = 0;
  134.     }
  135.   

src/libMesh/memory.c:137:8: Taking false branch
  135.   
  136.     /* store pointer, size */
  137.     if ( stack < MAXMEM ) {
                ^
  138.       mstack[cur].ptr  = calloc(nelem,elsize);
  139.       if ( !mstack[cur].ptr )  return(0);

src/libMesh/memory.c:156:5: 
  154.     }
  155.     else {
  156. >     fprintf(stderr,"M_calloc: unable to allocate %10zd bytes. table full\n",
  157.   	    nelem*elsize);
  158.       return(0);

src/libMesh/memory.c:158:5: 
  156.       fprintf(stderr,"M_calloc: unable to allocate %10zd bytes. table full\n",
  157.   	    nelem*elsize);
  158. >     return(0);
  159.     }
  160.   }

src/libMesh/memory.c:160:1: return from a call to M_calloc
  158.       return(0);
  159.     }
  160. > }
  161.   
  162.   /* Changes the size of the block pointed to by ptr to size bytes 

src/medit/transform.c:32:3: Skipping resetTransform(): function or method not found
30.   
31.     /* set default values */
32.     resetTransform(tr);
        ^
33.     tr->mbutton = 0;
34.   

src/medit/transform.c:33:3: 
31.     /* set default values */
32.     resetTransform(tr);
33. >   tr->mbutton = 0;
34.   
35.     return(tr);
